split model, embeddings. add documents to db

--- a/ragdoll_pdf_example.ipynb
+++ b/ragdoll_pdf_example.ipynb
@@ -49,9 +49,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ragdoll.config import Config\n",
+    "\n",
     "config={\n",
     "    'log_level':logging.INFO \n",
-    "    }"
+    "    }\n",
+    "\n",
+    "rd_config = Config(config)"
    ]
   },
   {
@@ -207,18 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[retriever] 🗃️  retrieving vector database (FAISS)...\u001b[0m\n",
+      "\u001b[32m[retriever] 🗃️  creating vector database (FAISS)...\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
-      "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n"
+      "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
+      "\u001b[32m[loader] Loading faiss with AVX2 support.\u001b[0m\n",
+      "\u001b[32m[loader] Could not load library with AVX2 support due to:\n",
+      "ModuleNotFoundError(\"No module named 'faiss.swigfaiss_avx2'\")\u001b[0m\n",
+      "\u001b[32m[loader] Loading faiss.\u001b[0m\n",
+      "\u001b[32m[loader] Successfully loaded faiss.\u001b[0m\n"
      ]
     }
    ],
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +255,6 @@
      "text": [
       "\u001b[32m[retriever] 📋 getting multi query retriever\u001b[0m\n",
       "\u001b[32m[retriever] 💭 Remember that the multi query retriever will incur additional calls to your LLM\u001b[0m\n",
-      "\u001b[32m[models] 🤖 retrieving OpenAI model for multi query retriever\u001b[0m\n",
       "\u001b[32m[retriever] 🗜️ Compression object pipeline: embeddings_filter ➤ splitter ➤ redundant_filter ➤ relevant_filter\u001b[0m\n"
      ]
     }
@@ -274,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +299,6 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m[retriever] 🔗 Running RAG chain\u001b[0m\n",
-      "\u001b[32m[models] 🤖 retrieving OpenAI model for RAG chain\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
