various updates to handle deprecated langchain references in community (google)

--- a/ragdoll_pdf_example.ipynb
+++ b/ragdoll_pdf_example.ipynb
@@ -255,6 +255,7 @@
      "text": [
       "\u001b[32m[retriever] 📋 getting multi query retriever\u001b[0m\n",
       "\u001b[32m[retriever] 💭 Remember that the multi query retriever will incur additional calls to your LLM\u001b[0m\n",
+      "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model for multi query retriever\u001b[0m\n",
       "\u001b[32m[retriever] 🗜️ Compression object pipeline: embeddings_filter ➤ splitter ➤ redundant_filter ➤ relevant_filter\u001b[0m\n"
      ]
     }
@@ -299,6 +300,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m[retriever] 🔗 Running RAG chain\u001b[0m\n",
+      "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model for RAG chain\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
@@ -319,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided context, the documents are related to the UK legislation, specifically the Immigration Act 2016 and the Income Tax Act 2007. The content of the documents includes provisions, amendments, penalties, enforcement, and support related to immigration and taxation in the United Kingdom.\n"
+      "Based on the provided context, the documents are primarily related to two acts: the Immigration Act 2016 and the Income Tax Act 2007. The content of the documents includes provisions, amendments, penalties, and enforcement related to immigration and taxation in the United Kingdom.\n"
      ]
     }
    ],
