move back to Langchain multiquery retriever, now resolved. Solves LLMChain deprecation warning

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,16 +144,16 @@
       " tell me more about langchain\u001b[0m\n",
       "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model \u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\u001b[0m\n",
-      "\u001b[32m[index] 🧠 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n"
+      "\u001b[32m[index] 🧠 Generated potential search queries: [\"What is the purpose of Langchain?\", \"Langchain reviews and user experiences\"]\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['langchain features and benefits', 'langchain reviews and testimonials']"
+       "['What is the purpose of Langchain?', 'Langchain reviews and user experiences']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query What is the purpose of Langchain?...\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query Langchain reviews and user experiences...\u001b[0m\n",
       "\u001b[32m[__init__] file_cache is only supported with oauth2client<4.0.0\u001b[0m\n",
       "\u001b[32m[__init__] file_cache is only supported with oauth2client<4.0.0\u001b[0m\n"
      ]
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,12 +194,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "  * https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
       "  * https://aws.amazon.com/what-is/langchain/\n",
-      "  * https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "  * https://www.techtarget.com/searchenterpriseai/definition/LangChain\n",
+      "  * https://www.reddit.com/r/LangChain/comments/12r5y1g/what_are_the_benefits_of_using_langchain_compared/\n",
       "  * https://www.reddit.com/r/LangChain/comments/18eukhc/i_just_had_the_displeasure_of_implementing/\n",
-      "  * https://news.ycombinator.com/item?id=36645575\n",
-      "  * https://www.reddit.com/r/LangChain/comments/16bfaeo/codedog_a_pull_request_review_tool/\n"
+      "  * https://medium.com/llm-study-diary-a-beginners-path-through-ai/comprehensive-review-of-langchain-part-1-4734d61a49e1\n",
+      "  * https://www.reddit.com/r/LangChain/comments/1bszde0/would_you_use_langchain_more_if_it_had_better/\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,30 +227,14 @@
       "----------------------------------------------------------------------------------------------------\n",
       "extracted 6 sites\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "https://lakefs.io/blog/what-is-langchain-ml-architecture/ \n",
+      "https://aws.amazon.com/what-is/langchain/ \n",
       "\n",
-      " Skip to content\n",
-      "Docs\n",
-      "Quickstart Use Cases\n",
-      "Product\n",
-      "lakeFS Cloud lakeFS Enterprise Pricing Contact Sales\n",
-      "Developers\n",
-      "Community Slack\n",
-      "Resources\n",
-      "Blog Guides Webinars Data Version Control Data Quality\n",
-      "GitHub Book a demo Try without installing\n",
-      "Menu\n",
-      "Docs\n",
-      "Quickstart Use Cases\n",
-      "Product\n",
-      "lakeFS Cloud lakeFS Enterprise Pricing Contact Sales\n",
-      "Developers\n",
-      "Community Slack\n",
-      "Resources\n",
-      "Blog Guides Webinars Data Version Control Data Quality\n",
-      "GitHub Book a demo Try without installing\n",
-      "Add Your Heading Text Here\n",
-      "Add Your H\n"
+      " Click here to return to Amazon Web Services homepage\n",
+      "About AWS\n",
+      "Contact Us\n",
+      "Support\n",
+      "English\n",
+      "My Account\n"
      ]
     }
    ],
@@ -260,7 +244,7 @@
     "print(f\"extracted {len(documents)} sites\")\n",
     "print(\"-\" * 100)\n",
     "\n",
-    "print(documents[0].metadata['source'],'\\n\\n',documents[0].page_content[:500])"
+    "print(documents[0].metadata['source'],'\\n\\n',documents[0].page_content[:100])"
    ]
   },
   {
@@ -284,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +283,7 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "extracted 780 documents from 6 documents\n",
+      "extracted 481 documents from 6 documents\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -322,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,9 +319,9 @@
       " tell me more about langchain\u001b[0m\n",
       "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model \u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\u001b[0m\n",
-      "\u001b[32m[index] 🧠 Generated potential search queries: [\"langchain features and benefits\", \"langchain reviews and testimonials\"]\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain features and benefits...\u001b[0m\n",
-      "\u001b[32m[index]   🌐 Searching with query langchain reviews and testimonials...\u001b[0m\n",
+      "\u001b[32m[index] 🧠 Generated potential search queries: [\"What is the purpose of Langchain?\", \"Langchain reviews and user experiences\"]\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query What is the purpose of Langchain?...\u001b[0m\n",
+      "\u001b[32m[index]   🌐 Searching with query Langchain reviews and user experiences...\u001b[0m\n",
       "\u001b[32m[__init__] file_cache is only supported with oauth2client<4.0.0\u001b[0m\n",
       "\u001b[32m[__init__] file_cache is only supported with oauth2client<4.0.0\u001b[0m\n",
       "\u001b[32m[index] 🌐 Fetching raw source content\u001b[0m\n",
@@ -349,7 +333,7 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "extracted 780 documents from 6 documents\n",
+      "extracted 481 documents from 6 documents\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -384,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -507,15 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\dev\\RAGdoll\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n"
      ]
     },
@@ -536,7 +518,7 @@
     }
    ],
    "source": [
-    "simdocs = retriever.get_relevant_documents(question)\n",
+    "simdocs = retriever.invoke(question)\n",
     "print(\"-\" * 100)\n",
     "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
     "print(\"-\" * 100, \"\\n\\n\")\n",
@@ -559,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -568,9 +550,7 @@
      "text": [
       "\u001b[32m[retriever] 📋 getting multi query retriever\u001b[0m\n",
       "\u001b[32m[retriever] 💭 Remember that the multi query retriever will incur additional calls to your LLM\u001b[0m\n",
-      "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model for multi query retriever\u001b[0m\n",
-      "c:\\dev\\RAGdoll\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
-      "  warn_deprecated(\n"
+      "\u001b[32m[models] 🤖 retrieving gpt-3.5-turbo-16k model for multi query retriever\u001b[0m\n"
      ]
     }
    ],
@@ -582,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -590,6 +570,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\u001b[0m\n",
+      "\u001b[32m[multi_query] Generated queries: ['1. Can you provide information about the LangChain?', \"2. I'm curious to know more about LangChain. Can you explain it to me?\", '3. Could you please give me an overview of LangChain and its purpose?']\u001b[0m\n",
+      "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n",
       "\u001b[32m[_client] HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\u001b[0m\n"
      ]
@@ -599,18 +581,19 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The retriever returned 8 relevant documents. below is a snippet:\n",
+      "The retriever returned 4 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
-      "Title: What Is LangChain: Components, Benefits & How to Get Started\n",
-      "Content: works LangChain was developed in Python and JavaScript, and it supports a wide range of language models such as GPT3, Hugging Face, Jurassic-1 Jumbo, and others. To start using LangChain, you must first create a language model. This means either taking advantage of a publicly available language model, such as GPT3, or training your own model. Once complet\n"
+      "Source: https://aws.amazon.com/what-is/langchain/\n",
+      "Title: What is LangChain? - LangChain Explained - AWS\n",
+      "Content: What is LangChain?\n",
+      "LangChain is an open source framework for building applications based on large language models (LLMs). LLMs are large deep-learning models pre-trained on large amounts of data that can generate responses to user queries—for example, answering questions or creating images from text-based prompts. LangChain provides tools and abstractions to improve the customization,\n"
      ]
     }
    ],
    "source": [
-    "simdocs = mq_retriever.get_relevant_documents(\"what is langchain\")\n",
+    "simdocs = mq_retriever.invoke(\"what is langchain\")\n",
     "print(\"-\" * 100)\n",
     "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
     "print(\"-\" * 100, \"\\n\\n\")\n",
@@ -636,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -736,15 +719,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LangChain is an open-source framework that provides developers with the tools they need to build applications using large language models (LLMs). LLMs are deep-learning models that have been pre-trained on vast amounts of data and can generate responses to user queries, such as answering questions or creating images from text-based prompts.\n",
+      "LangChain is an open source framework that was launched in 2022 by co-founders Harrison Chase and Ankush Gola. It is designed to enable software developers working with artificial intelligence (AI) and machine learning to combine large language models (LLMs) with other external components to develop LLM-powered applications. LLMs are deep-learning models that have been pre-trained on large amounts of data and can generate responses to user queries, such as answering questions or creating images from text-based prompts.\n",
       "\n",
-      "One of the key features of LangChain is its ability to improve the customization, accuracy, and relevancy of the information generated by LLMs. It achieves this by providing tools and abstractions that allow developers to create new prompt chains or customize existing templates. This flexibility enables teams to connect various prompts and orchestrate them effectively.\n",
+      "The main goal of LangChain is to link powerful LLMs, such as OpenAI's GPT-3.5 and GPT-4, to an array of external data sources in order to create and leverage the benefits of natural language processing (NLP) applications. This means that developers, software engineers, and data scientists with experience in Python, JavaScript, or TypeScript programming languages can utilize LangChain's packages offered in those languages.\n",
       "\n",
-      "LangChain also simplifies the process of arranging large volumes of data so that LLMs can quickly access it. This is particularly useful for developers who want to create dynamic, data-responsive applications. By leveraging LangChain, developers can ensure that LLMs have access to the most up-to-date data available online, enabling them to generate accurate and relevant responses.\n",
+      "LangChain provides tools and abstractions that improve the customization, accuracy, and relevancy of the information generated by the LLMs. Developers can use LangChain components to build new prompt chains or customize existing templates. Additionally, LangChain includes components that allow LLMs to access new data sets without the need for retraining.\n",
       "\n",
-      "The framework has already been used to create advanced AI chatbots, generative question-answering (GQA) systems, and language summarization tools. These applications demonstrate the versatility and potential of LangChain in various domains.\n",
+      "By leveraging LangChain, developers can enhance the capabilities of their AI applications by incorporating LLMs and connecting them to external data sources. This enables the development of more advanced and accurate NLP applications that can understand and respond to user queries in a more human-like manner.\n",
       "\n",
-      "In summary, LangChain is an open-source framework that empowers developers to build applications using large language models. It enhances customization, accuracy, and relevancy by providing tools and abstractions for prompt orchestration. Additionally, it simplifies data arrangement, allowing LLMs to access the most up-to-date information. The framework has already been utilized to create advanced AI applications, showcasing its potential in the field of natural language processing.\n"
+      "It is important to note that LangChain is an open source framework, which means that it is freely available for developers to use and contribute to. This fosters collaboration and innovation within the AI and machine learning community, as developers can share their knowledge and expertise to improve the framework and create new applications.\n",
+      "\n",
+      "In summary, LangChain is an open source framework that allows developers to combine large language models with other external components to build powerful AI applications. It aims to link LLMs to external data sources in order to create and leverage the benefits of natural language processing. By using LangChain, developers can enhance the customization, accuracy, and relevancy of the information generated by LLMs, leading to more advanced and accurate NLP applications.\n"
      ]
     }
    ],
