bug fix markdown swimmer

--- a/examples/chunker.ipynb
+++ b/examples/chunker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langchain_text_splitters.character.RecursiveCharacterTextSplitter at 0x7cfddf0c3cd0>"
+       "<langchain_text_splitters.markdown.MarkdownHeaderTextSplitter at 0x7ae87539fb90>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,29 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chunk 1:\n",
-      "# This is a sample Markdown document\n",
-      "\n",
-      "This is some introductory text.\n",
-      "\n",
-      "## Section 1\n",
-      "\n",
-      "This is the content of section 1.\n",
-      "\n",
-      "### Subsection A\n",
-      "\n",
-      "This is a subsection within section 1.\n",
-      "\n",
-      "## Section 2\n",
-      "\n",
-      "This is the content of section 2.\n",
+      "<--- Chunk 1: --->\n",
+      "page_content='This is some introductory text.' metadata={1: 'This is a sample Markdown document'}\n",
+      "---\n",
+      "<--- Chunk 2: --->\n",
+      "page_content='This is the content of section 1.' metadata={1: 'This is a sample Markdown document', 2: 'Section 1'}\n",
+      "---\n",
+      "<--- Chunk 3: --->\n",
+      "page_content='This is a subsection within section 1.' metadata={1: 'Subsection A', 2: 'Section 1'}\n",
+      "---\n",
+      "<--- Chunk 4: --->\n",
+      "page_content='This is the content of section 2.' metadata={2: 'Section 2'}\n",
       "---\n"
      ]
     }
@@ -120,7 +115,7 @@
    "source": [
     "chunks = splitter.split_text(text)\n",
     "for i, chunk in enumerate(chunks):\n",
-    "    print(f\"Chunk {i+1}:\\n{chunk}\\n---\")"
+    "    print(f\"<--- Chunk {i+1}: --->\\n{chunk}\\n---\")"
    ]
   },
   {
@@ -134,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
