--- a/examples/ingestion.ipynb
+++ b/examples/ingestion.ipynb
@@ -57,21 +57,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-22 19:33:11,005 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=86400s\n"
+      "2025-04-22 19:52:14,356 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-22 19:33:11,844 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
-      "2025-04-22 19:33:12,196 - WARNING - USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
-      "2025-04-22 19:33:12,198 - INFO - Loaded 20 file extension loaders\n",
-      "2025-04-22 19:33:12,200 - INFO - Service initialized: loaders=20, max_threads=10\n",
-      "2025-04-22 19:33:12,201 - INFO - Starting ingestion of 5 inputs\n",
+      "2025-04-22 19:52:15,119 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:52:15,402 - WARNING - USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+      "2025-04-22 19:52:15,404 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:52:15,405 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:52:15,406 - INFO - Starting ingestion of 5 inputs\n",
       "/home/user/RAGdoll/.venv/lib/python3.11/site-packages/pydub/utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
       "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n",
-      "2025-04-22 19:33:19,425 - INFO - Finished ingestion: 777 documents\n"
+      "2025-04-22 19:52:22,479 - INFO - Finished ingestion: 777 documents\n"
      ]
     },
     {
@@ -164,18 +164,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-22 19:33:19,463 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=86400s\n",
-      "2025-04-22 19:33:19,465 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
-      "2025-04-22 19:33:19,466 - INFO - Loaded 20 file extension loaders\n",
-      "2025-04-22 19:33:19,468 - INFO - Service initialized: loaders=20, max_threads=10\n",
-      "2025-04-22 19:33:19,469 - INFO - Starting ingestion of 1 inputs\n",
-      "2025-04-22 19:33:22,906 - INFO - Finished ingestion: 773 documents\n",
-      "2025-04-22 19:33:22,908 - INFO - Starting ingestion of 2 inputs\n",
-      "2025-04-22 19:33:22,911 - INFO - Finished ingestion: 2 documents\n",
-      "2025-04-22 19:33:22,912 - INFO - Starting ingestion of 1 inputs\n",
-      "2025-04-22 19:33:23,321 - INFO - Finished ingestion: 1 documents\n",
-      "2025-04-22 19:33:23,322 - INFO - Starting ingestion of 1 inputs\n",
-      "2025-04-22 19:33:24,498 - INFO - Finished ingestion: 1 documents\n"
+      "2025-04-22 19:52:22,521 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:52:22,522 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:52:22,523 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:52:22,524 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:52:22,525 - INFO - Starting ingestion of 1 inputs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:52:25,900 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:52:25,902 - INFO - Starting ingestion of 2 inputs\n",
+      "2025-04-22 19:52:25,906 - INFO - Finished ingestion: 2 documents\n",
+      "2025-04-22 19:52:25,908 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:52:26,347 - INFO - Finished ingestion: 1 documents\n",
+      "2025-04-22 19:52:26,348 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:52:27,477 - INFO - Finished ingestion: 1 documents\n"
      ]
     },
     {
@@ -231,14 +237,23 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "IngestionService.__init__() got an unexpected keyword argument 'collect_metrics'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mragdoll\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mingestion\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mingestion_service\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IngestionService\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Initialize with only the supported parameters\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m service = \u001b[43mIngestionService\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmax_threads\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m                \u001b[49m\u001b[38;5;66;43;03m# Limit concurrency\u001b[39;49;00m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m                \u001b[49m\u001b[38;5;66;43;03m# Process files in batches of 10\u001b[39;49;00m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43muse_cache\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m               \u001b[49m\u001b[38;5;66;43;03m# Enable caching\u001b[39;49;00m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcollect_metrics\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m          \u001b[49m\u001b[38;5;66;43;03m# Enable metrics collection\u001b[39;49;00m\n\u001b[32m     10\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Process documents - pass file_paths directly, not [file_paths]\u001b[39;00m\n\u001b[32m     13\u001b[39m documents = service.ingest_documents(file_paths)\n",
-      "\u001b[31mTypeError\u001b[39m: IngestionService.__init__() got an unexpected keyword argument 'collect_metrics'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:52:27,506 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:52:27,508 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:52:27,509 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:52:27,510 - INFO - Service initialized: loaders=20, max_threads=4\n",
+      "2025-04-22 19:52:27,512 - INFO - Starting ingestion of 5 inputs\n",
+      "2025-04-22 19:52:33,573 - INFO - Finished ingestion: 777 documents\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 777 document chunks\n",
+      "First document size: 1043 characters\n"
      ]
     }
    ],
@@ -281,10 +296,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d0bc5244",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:54:22,470 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:54:22,471 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:54:22,473 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:54:22,474 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:54:22,495 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:54:22,496 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:54:22,498 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:54:22,499 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:54:22,499 - INFO - Starting ingestion of 1 inputs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache cleared\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:54:25,962 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:54:26,463 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:54:29,760 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:54:30,264 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:54:33,566 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:54:33,580 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:54:33,582 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:54:33,583 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:54:33,584 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:54:33,585 - INFO - Starting ingestion of 1 inputs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Without cache:\n",
+      "  Processed 773 documents\n",
+      "  Average time: 3.356 seconds\n",
+      "  Min time: 3.300, Max time: 3.463\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:54:36,910 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:54:37,411 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:54:40,723 - INFO - Finished ingestion: 773 documents\n",
+      "2025-04-22 19:54:41,226 - INFO - Starting ingestion of 1 inputs\n",
+      "2025-04-22 19:54:44,517 - INFO - Finished ingestion: 773 documents\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "With cache:\n",
+      "  Processed 773 documents\n",
+      "  Average time: 3.311 seconds\n",
+      "  Min time: 3.292, Max time: 3.326\n",
+      "\n",
+      "Cache performance improvement: 1.3%\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete caching performance test\n",
     "from ragdoll.ingestion.ingestion_service import IngestionService\n",
@@ -295,7 +384,7 @@
     "    \"\"\"Measure document processing time with or without cache.\"\"\"\n",
     "    times = []\n",
     "    \n",
-    "    service = IngestionService(use_cache=use_cache, cache_ttl=3600)\n",
+    "    service = IngestionService(use_cache=use_cache)\n",
     "    \n",
     "    # Run multiple times to get average performance\n",
     "    for i in range(runs):\n",
@@ -351,10 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "37c071a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:54:48,205 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:54:48,206 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:54:48,208 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:54:48,209 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:54:48,211 - INFO - Starting ingestion of 4 inputs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error during ingestion: No valid sources found\n"
+     ]
+    }
+   ],
    "source": [
     "from ragdoll.ingestion.ingestion_service import IngestionService\n",
     "import logging\n",
@@ -397,10 +505,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "09343461",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5 files\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace your current loading code with this\n",
     "import os\n",
@@ -427,10 +543,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f03f74be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 19:54:56,794 - INFO - Cache initialized at /home/user/.ragdoll/cache with TTL=3600s\n",
+      "2025-04-22 19:54:56,796 - WARNING - Module langchain_community.document_loaders does not have attribute RtfLoader for extension .rtf. Skipping this loader.\n",
+      "2025-04-22 19:54:56,798 - INFO - Loaded 20 file extension loaders\n",
+      "2025-04-22 19:54:56,799 - INFO - Service initialized: loaders=20, max_threads=10\n",
+      "2025-04-22 19:54:56,801 - INFO - Starting ingestion of 5 inputs\n",
+      "2025-04-22 19:55:02,532 - INFO - Finished ingestion: 777 documents\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'aggregate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m metrics = service.get_metrics(days=\u001b[32m30\u001b[39m)  \u001b[38;5;66;03m# Get metrics from the last 30 days\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Use the metrics data\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTotal documents processed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmetrics\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43maggregate\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mtotal_documents\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAverage success rate: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetrics[\u001b[33m'\u001b[39m\u001b[33maggregate\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mavg_success_rate\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Print metrics for each source type\u001b[39;00m\n",
+      "\u001b[31mKeyError\u001b[39m: 'aggregate'"
+     ]
+    }
+   ],
    "source": [
     "# Create service\n",
     "service = IngestionService(collect_metrics=True)\n",
