bugfix llm integration for entity extraction

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 add pdf extraction:
 [x] https://github.com/opendatalab/PDF-Extract-Kit - added from markitdown
 [ ] move chunking from entity to use standard chunking from config
-
+[ ] set default llm in entity extraction
 
 
 mermaid: 
