FIxed: Embedding support is split between two incompatible APIs: RagdollEmbeddings exposes a stateful wrapper that only knows about OpenAI/HF (ragdoll/embeddings/embeddings.py (lines 1-81)), while ragdoll/embeddings/__init__.py (lines 1-115) exposes a stateless get_embedding_model that adds providers like Google and Cohere. The rest of the codebase calls both, so configuration and caching logic are duplicated.
Docs & Samples

README.md (lines 115-120) and docs/embeddings.md (lines 21-92) now describe the unified get_embedding_model workflow, removing references to the deprecated class and explaining how to extend providers.
examples/embeddings.ipynb code cells were updated to import get_embedding_model and demonstrate default, HuggingFace, and custom OpenAI usage without touching the old API (cell metadata updated via script; no residual RagdollEmbeddings imports remain).
Tests

tests/test_embeddings.py (lines 1-84) was rewritten to assert the behavior of get_embedding_model, covering config-driven selection, provider fallback, direct provider overrides, and inference by model name. This keeps coverage focused on the single source of truth.

--- a/examples/embeddings.ipynb
+++ b/examples/embeddings.ipynb
@@ -28,10 +28,10 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "from ragdoll.config.config_manager import ConfigManager\n",
-    "from ragdoll.embeddings.embeddings import RagdollEmbeddings\n",
+    "from ragdoll.embeddings import get_embedding_model\n",
     "\n",
     "# Get openai key from .env file\n",
-    "load_dotenv(override=True)"
+    "load_dotenv(override=True)\n"
    ]
   },
   {
@@ -101,12 +101,8 @@
     "config_manager = ConfigManager()\n",
     "config = config_manager._config  # type: ignore\n",
     "\n",
-    "print(\"Initializing RagdollEmbeddings...\")\n",
-    "# Initialize RagdollEmbeddings with the loaded configuration\n",
-    "embeddings = RagdollEmbeddings(config=config)\n",
-    "\n",
-    "# Get an embeddings model instance using the default settings\n",
-    "model = embeddings.get_embeddings_model()\n",
+    "print(\"Initializing embeddings from config...\")\n",
+    "model = get_embedding_model(config_manager=config_manager)\n",
     "print(\"Retrieving embeddings model...\")\n",
     "\n",
     "# Define the text to embed\n",
@@ -157,16 +153,12 @@
     "# Example of using HuggingFace embeddings model\n",
     "print(\"Example with HuggingFace Embeddings\")\n",
     "print(\"Loading configuration for HuggingFace...\")\n",
-    "# Modify the configuration to use HuggingFace embeddings\n",
-    "config_hf = config.copy()\n",
-    "config_hf[\"embeddings\"][\"default_model\"] = \"huggingface\"\n",
-    "config_hf[\"embeddings\"][\"huggingface\"] = {\"model_name\": \"sentence-transformers/all-mpnet-base-v2\"}\n",
-    "\n",
-    "# Initialize RagdollEmbeddings with the modified configuration\n",
-    "embeddings_hf = RagdollEmbeddings(config=config_hf)\n",
     "\n",
     "print(\"Retrieving HuggingFace embeddings model...\")\n",
-    "model_hf = embeddings_hf.get_embeddings_model()\n",
+    "model_hf = get_embedding_model(\n",
+    "    provider=\"huggingface\",\n",
+    "    model_name=\"sentence-transformers/all-mpnet-base-v2\",\n",
+    ")\n",
     "\n",
     "print(\"Embedding text with HuggingFace model...\")\n",
     "try:\n",
@@ -214,15 +206,13 @@
     "# Example of initializing with a custom configuration\n",
     "print(\"Example with Custom Configuration\")\n",
     "print(\"Creating a custom configuration...\")\n",
-    "custom_config = config.copy()\n",
-    "custom_config[\"embeddings\"][\"default_model\"] = \"openai\"\n",
-    "custom_config[\"embeddings\"][\"openai\"] = {\"model\": \"text-embedding-3-small\", \"dimensions\": 1536}\n",
-    "\n",
-    "# Initialize RagdollEmbeddings with the custom configuration\n",
-    "embeddings_custom = RagdollEmbeddings(config=custom_config)\n",
     "\n",
     "print(\"Retrieving custom embeddings model...\")\n",
-    "model_custom = embeddings_custom.get_embeddings_model()\n",
+    "model_custom = get_embedding_model(\n",
+    "    provider=\"openai\",\n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    dimensions=1536,\n",
+    ")\n",
     "\n",
     "print(\"Embedding text with custom model...\")\n",
     "try:\n",
@@ -231,7 +221,7 @@
     "    print(f\"Embedding snippet (Custom): {embedding_custom[:10]}...\")\n",
     "    print(f\"Embedding length (Custom): {len(embedding_custom)}\")\n",
     "except Exception as e:\n",
-    "    print(f\"Could not embed text with custom model: {e}\")"
+    "    print(f\"Could not embed text with custom model: {e}\")\n"
    ]
   },
   {
