Unified configuration path
Config Path Unified

* ragdoll/config/__init__.py now exports Config, so imports like from ragdoll.config import Config work everywhere.
* Added ragdoll/settings.py, which caches a single Config instance (honoring RAGDOLL_CONFIG_PATH) and exposes typed getters; all default lookups now flow through this module.

Runtime Updates

* Core modules (ragdoll/ragdoll.py, ingestion services/pipeline, cache manager, chunkers, embeddings, tools, graph stores, entity extraction, LLM helpers) were rewired to use either the shared manager (settings.get_config_manager()) or an explicit Config(config_path) when the caller supplies a custom path. This removes dozens of ad-hoc ConfigManager() instantiations and direct env reads.
* Graph/entity-extraction loaders now lazily handle optional dependencies so importing ragdoll.graph_stores no longer forces spacy.
* Search tools and other utilities accept optional Config instances but default to the shared settings cache.

Examples & Tests

* Example scripts/notebooks were updated to import Config rather than the old module path.

--- a/examples/embeddings.ipynb
+++ b/examples/embeddings.ipynb
@@ -27,7 +27,7 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from ragdoll.config.config_manager import ConfigManager\n",
+    "from ragdoll.config import Config\n",
     "from ragdoll.embeddings import get_embedding_model\n",
     "\n",
     "# Get openai key from .env file\n",
@@ -98,7 +98,7 @@
    ],
    "source": [
     "# Load the configuration using ConfigManager\n",
-    "config_manager = ConfigManager()\n",
+    "config_manager = Config()\n",
     "config = config_manager._config  # type: ignore\n",
     "\n",
     "print(\"Initializing embeddings from config...\")\n",
