Bug fix. Environment references are now handled consistently across embeddings and LLM configs.

--- a/examples/graph_rag_ingestion.ipynb
+++ b/examples/graph_rag_ingestion.ipynb
@@ -68,18 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f3d9f2f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LLM caller ready for gpt-4o.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "from ragdoll.pipeline import IngestionOptions, IngestionPipeline\n",
@@ -87,7 +79,7 @@
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "MODEL_NAME = \"gpt-4o\"\n",
+    "MODEL_NAME = \"gpt-4o-nano\"\n",
     "llm_caller = get_llm_caller(MODEL_NAME)\n",
     "if llm_caller is None:\n",
     "    raise RuntimeError(\"Unable to initialise the requested LLM. Check your configuration or API keys.\")\n",
